fix: edit component spacing

--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -2,7 +2,7 @@
   list-style-type: none;
 }
 
-.user-header img {
+.user-header img, .edit-profile img {
   object-fit: cover;
 }
 
